--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-chain-libs-pkg",
+  "name": "js-chain-libs",
   "collaborators": [
     "Enzo Cioppettini <ecioppettini@atixlabs.com>"
   ],
